# improve_your_life

./: .coveragerc  .env.example  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
UserApp/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
UserApp/management/commands/: csu.py
UserApp/migrations/: 0001_initial.py  0002_user_avatar_user_chat_id_user_city_user_country_and_more.py
app/: settings.py  urls.py
habitApp/: apps.py  constants.py  models.py  paginations.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habitApp/migrations/: 0001_initial.py  0002_alter_habit_action_alter_habit_associated_habit_and_more.py  0003_alter_habit_options.py  0004_alter_habit_at_action.py  0005_alter_habit_reward.py
