[tool.poetry]
name = "improve-your-life"
version = "0.1.0"
description = ""
authors = ["denisbelenko <denisdel123@>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
celery = "^5.4.0"
redis = "^5.0.4"
psycopg2 = "^2.9.9"
ipython = "^8.25.0"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.32.3"
pillow = "^10.3.0"
django-celery-beat = "^2.6.0"
telebot = "^0.0.5"
pytz = "^2024.1"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
